--- a/public/css/style.css
+++ b/public/css/style.css
@@ -77,6 +77,18 @@
     line-height:150%;
     padding: 60px;
 }
+.j6 {
+    text-align: center;
+    position: absolute;
+    right: 700px;
+    top: 500px;
+    display: default;
+    vertical-align: text-top;
+    margin: auto;
+    width: 600px;
+    line-height: 150%;
+    padding: 60px;
+}
 .navbar {
     margin-bottom: 50px;
     border-radius: 0;
