--- a/public/css/style.css
+++ b/public/css/style.css
@@ -89,6 +89,53 @@
     line-height: 150%;
     padding: 60px;
 }
+
+.j7 {
+    text-align: center;
+    position: absolute;
+    right: 700px;
+    top: 660px;
+    display: default;
+    vertical-align: text-top;
+    margin: auto;
+    width: 600px;
+    line-height: 150%;
+    padding: 60px;
+}
+
+.j8 {
+    text-align: center;
+    position: absolute;
+    right: 700px;
+    top: 200px;
+    display: default;
+    vertical-align: text-top;
+    margin: auto;
+    width: 600px;
+    line-height: 150%;
+    padding: 60px;
+}
+
+.j9 {
+    text-align: center;
+    position: absolute;
+    display: default;
+    vertical-align: text-top;
+    margin: auto;
+    top: 450px;
+    width: 1150px;
+}
+
+.j10 {
+    text-align: center;
+    position: absolute;
+    display: default;
+    vertical-align: text-top;
+    margin: auto;
+    top: 200px;
+    width: 1150px;
+}
+
 .navbar {
     margin-bottom: 50px;
     border-radius: 0;
