Javascript Validation Form

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -151,3 +151,9 @@ footer {
     background-color: #f2f2f2;
     padding: 25px;
 }
+
+/*.error
+{
+    color:red;
+    font-family:verdana, Helvetica;
+}*/
