--- a/public/css/style.css
+++ b/public/css/style.css
@@ -132,8 +132,21 @@
     display: default;
     vertical-align: text-top;
     margin: auto;
-    top: 200px;
+    top: 180px;
     width: 1150px;
+}
+
+.j11 {
+    text-align: center;
+    position: absolute;
+    right: 700px;
+    top: 150px;
+    display: default;
+    vertical-align: text-top;
+    margin: auto;
+    width: 600px;
+    line-height: 150%;
+    padding: 60px;
 }
 
 .navbar {
